fix:图片多轮识别